--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-coverage
-rdoc
-doc
-.yardoc
+*.gem
+*.rbc
 .bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
 pkg
-spec/test.log
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
