--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
 name: Tests
 
-on: [push, pull_request]
+on: pull_request
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         ruby-version: ['2.6', '2.7', '3.0']
